--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Homepage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-   <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
@@ -20,26 +20,33 @@
     <nav id="main_nav" class="navbar navbar-expand-lg navbar-light bg-white border">
         <div class="container d-flex justify-content-between align-items-center">
             <a class="navbar-brand h1" href="index.html">
-                <span class="text-dark h4"><img class="img-logo"  src="//cdn.shopify.com/s/files/1/0275/3688/3773/files/Untitled-1_color_2x_ed94a63e-0a94-48b0-b496-f87db3cb08c2.png?v=1588935672" alt=""></span> 
+                <span class="text-dark h4"><img class="img-logo"
+                        src="//cdn.shopify.com/s/files/1/0275/3688/3773/files/Untitled-1_color_2x_ed94a63e-0a94-48b0-b496-f87db3cb08c2.png?v=1588935672"
+                        alt=""></span>
             </a>
-            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler-success" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbar-toggler-success" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="align-self-center collapse navbar-collapse flex-fill  d-lg-flex justify-content-lg-between" id="navbar-toggler-success">
+            <div class="align-self-center collapse navbar-collapse flex-fill  d-lg-flex justify-content-lg-between"
+                id="navbar-toggler-success">
                 <div class="flex-fill mx-xl-5 mb-2">
                     <ul class="nav navbar-nav d-flex justify-content-between mx-xl-3 text-center text-dark">
                         <li class="nav-item">
                             <a class="nav-link btn-outline-primary rounded-pill px-3" href="index.html">ABOUT US</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="about.html">EVENTS CATERING</a>
+                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="about.html">EVENTS
+                                CATERING</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link btn-outline-primary rounded-pill px-3" href="work.html">FOOD SERVICES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="pricing.html">SUSTAINABILITY</a>
+                            <a class="nav-link btn-outline-primary rounded-pill px-3"
+                                href="pricing.html">SUSTAINABILITY</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link btn-outline-primary rounded-pill px-3" href="contact.html">ARTICLES</a>
@@ -49,22 +56,41 @@
                         </li>
                         <li class="nav-item">
                             <a class="btn-nav" href="contact.html">
-                                
-                                <button class="nav-link btn-outline-light btn-nav px-1 btn " style="color: #296F56;"><i class="fa-solid fa-bag-shopping"></i> MENU</button>
+
+                                <button class="nav-link btn-outline-light btn-nav px-1 btn " style="color: #296F56;"><i
+                                        class="fa-solid fa-bag-shopping"></i> MENU</button>
                             </a>
                         </li>
                     </ul>
                 </div>
-                <div class="navbar align-self-center d-flex">
-                    <a class="nav-link" href="#"><i class='bx bx-bell bx-sm bx-tada-hover text-primary'></i></a>
-                    <a class="nav-link" href="#"><i class='bx bx-cog bx-sm text-primary'></i></a>
-                    <a class="nav-link" href="#"><i class='bx bx-user-circle bx-sm text-primary'></i></a>
-                </div>
+
             </div>
         </div>
     </nav>
 
+    <div class="image-banner">
+        <img src="/assets/img/img-banner.png" alt="">
+    </div>
 
+    <div class="container">
+        <div class="text-center">
+            <img src="/assets/img/img-tunglok.png" alt="">
+            <br>
+            <h3 class="font-weight-bold">A QUALITY PRODUCT BY TUNGLOK GROUP</h3>
+            <p>BellyGood is a one-stop Halal-certified catering service. Established in 2013 by TungLok Group. BellyGood
+                aims to provide delightful moments through customisable catering solutions for all occasions, from
+                everyday meals to corporate and institutional needs, our team of award-winning hefs takes pride in
+                providing inspiring menus with a local twist, aiming to satisfy our customer’s every dining need.</p>
+            <br>
+            <br>
+            <button type="button" class="btn btn-outline-secondary font-weight-bold button-radius">SEE MORE</button>
+            <br><br>
+            <div class="mt-4">
+                <h3 class="font-weight-bold">OUR MENU</h3>
+            </div>
+            
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
