:sparkles: new feat(image) : add image gallery

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         </div>
     </nav>
 
-    <div class="image-banner">
-        <img src="/assets/img/img-banner.png" alt="">
-    </div>
+
+    <img class="img-banner" src="/assets/img/img-banner.png" alt="">
+
 
     <div class="container">
         <div class="text-center">
@@ -88,8 +88,49 @@
             <div class="mt-4">
                 <h3 class="font-weight-bold">OUR MENU</h3>
             </div>
-            
+
+
+
+            <section class="row tm-section mt-4">
+                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+                    <div class="border">
+                        <img src="/assets/img/img-taleoflove.png" alt="">
+
+                    </div>
+
+                </div>
+
+            </section>
+
         </div>
+
+        <section class="row tm-section mt-4">
+            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+                <div class="border-top border-bottom border-start">
+                    <img class="img-banner bg-image" src="/assets/img/img-celebratory.png" alt="">
+
+                </div>
+
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+                <div class="border-top border-bottom border-end">
+                    <img class="img-banner bg-image" src="/assets/img/img-buffet.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="row tm-section tm-col-md-reverse">
+            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+                <div class=" border-bottom border-start border-end">
+                    <img class="img-banner bg-image" src="/assets/img/img-bento.png" alt="">
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+                <div class=" border-bottom border-end">
+                    <img class="img-banner bg-image" src="/assets/img/img-readytoheat.png" alt="">
+                </div>
+            </div>
+        </section>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
