:sparkles: feat(image) : image clients

--- a/index.html
+++ b/index.html
@@ -133,6 +133,102 @@
 
     </div>
 
+    <section class="row tm-section mt-4 tm-col-md-reverse">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+            <img class="img-banner img-black" src="/assets/img/img-events.png" alt="">
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+            <img class="img-banner img-black" src="/assets/img/img-foodservices.png" alt="">
+        </div>
+    </section>
+
+    <div class="bg-sustainability">
+        <div class="container">
+            <div class="text-center">
+                <div class="mt-4">
+                    <br>
+                    <br>
+                    <h3 class="font-weight-bold">SUSTAINABILITY</h3>
+                    <div class="mt-4">
+                        <p>Tung Lok affirms the commitment to sustainability with the publication of the fourth
+                            Sustainability Report. This Sustainability Report includes discussions of the material
+                            sustainability principles and initiatives to present accountability of the ESG factors</p>
+                    </div>
+                    <br>
+                    <br>
+                    <button type="button" class="btn btn-outline-secondary font-weight-bold button-radius">SEE
+                        MORE</button>
+                    <br><br>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <h3 class="text-center text-uppercase pt-5 mt-5 pb-3">OUR AWARDS</h3>
+
+
+        <div class="row mx-5 px-5 py-4">
+            <div class="col-md-4 text-center">
+                <img src="assets/img/BG_Awards_4_Tallypress.png" alt="">
+            </div>
+            <div class="col-md-4 text-center">
+                <img src="assets/img/BG_Awards_2_Tatler.png" alt="">
+            </div>
+            <div class="col-md-4 text-center">
+                <img src="assets/img/BG_Awards_1_Foodline.png" alt="">
+            </div>
+        </div>
+
+        <hr>
+
+        <h3 class="text-center text-uppercase pt-5 pb-3">CERTIFICATIONS</h3>
+
+
+        <div class="row justify-content-center mx-5 px-5 py-4">
+            <div class="col-md-2 col-md-offset-1 text-center">
+                <img src="assets/img/Group_1097.png" alt="">
+            </div>
+            <div class="col-md-2 text-center">
+                <img src="assets/img/Group_1291.png" alt="">
+            </div>
+            <div class="col-md-2 text-center">
+                <img src="assets/img/Group_1083.png" alt="">
+            </div>
+            <div class="col-md-2 text-center">
+                <img src="assets/img/Group_1102.png" alt="">
+            </div>
+            <div class="col-md-2 text-center">
+                <img src="assets/img/Group_1295.png" alt="">
+            </div>
+        </div>
+
+        <h3 class="text-center text-uppercase pt-5 ">OUR CLIENTS</h3>
+
+
+        <div class="row justify-content-center mx-5 px-5 py-4">
+            <div class="col-md-3 col-md-offset-1 text-center">
+                <img src="assets/img/Group_1169.png" alt="">
+            </div>
+            <div class="col-md-2 text-center">
+                <img src="assets/img/Group_1120.png" alt="">
+            </div>
+            <div class="col-md-2 text-center">
+                <img src="assets/img/Group_1127.png" alt="">
+            </div>
+            <div class="col-md-2 text-center">
+                <img src="assets/img/Group_1165.png" alt="">
+            </div>
+            <div class="col-md-3 text-center">
+                <img src="assets/img/Group_1148.png" alt="">
+            </div>
+        </div>
+
+
+    </div>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
