:recycle: refactor : change background color

--- a/index.html
+++ b/index.html
@@ -133,16 +133,16 @@
 
     </div>
 
-    <section class="row tm-section mt-4 tm-col-md-reverse">
-        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
-            <img class="img-banner img-black" src="/assets/img/img-events.png" alt="">
-        </div>
-        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
-            <img class="img-banner img-black" src="/assets/img/img-foodservices.png" alt="">
-        </div>
-    </section>
-
     <div class="bg-sustainability">
+        <section class="row tm-section mt-4 tm-col-md-reverse">
+            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+                <img class="img-banner img-black" src="/assets/img/img-events.png" alt="">
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+                <img class="img-banner img-black" src="/assets/img/img-foodservices.png" alt="">
+            </div>
+        </section>
+
         <div class="container">
             <div class="text-center">
                 <div class="mt-4">
@@ -159,6 +159,42 @@
                     <button type="button" class="btn btn-outline-secondary font-weight-bold button-radius">SEE
                         MORE</button>
                     <br><br>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="bg-light">
+        <div class="text-center">
+            <div class="mt-4">
+                <h4>TELL US MORE ABOUT YOUR EVENT</h4>
+            </div>
+            <div class="mt-4">
+                <div class="row">
+                    <form action="">
+                        <div class="col-md-4">
+
+                        </div>
+                        <div class="col-md-4">
+
+                        </div>
+                        <div class="col-md-4">
+
+                        </div>
+                        <div class="col-md-4">
+
+                        </div>
+                        <div class="col-md-4">
+
+                        </div>
+                        <div class="col-md-4">
+
+                        </div>
+                        <div class="col-md-12">
+
+                        </div>
+                    </form>
+
                 </div>
             </div>
         </div>
@@ -223,6 +259,8 @@
                 <img src="assets/img/Group_1148.png" alt="">
             </div>
         </div>
+
+
 
 
     </div>
