:recycle: refactor:add img overlay

--- a/index.html
+++ b/index.html
@@ -134,14 +134,43 @@
     </div>
 
     <div class="bg-sustainability">
-        <section class="row tm-section mt-4 tm-col-md-reverse">
+        <!-- <section class="row tm-section mt-4 tm-col-md-reverse">
             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
                 <img class="img-banner img-black" src="/assets/img/img-events.png" alt="">
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
                 <img class="img-banner img-black" src="/assets/img/img-foodservices.png" alt="">
             </div>
-        </section>
+        </section> -->
+        <div class="row">
+            <div class="card col-md-6 p-0 border-0 ">
+                <img class="img-banner img-black" src="/assets/img/img-events.png" alt="">
+                <div class="card-img-overlay text-white text-center custoverlay">
+                    <div class="mx-4" style="margin:auto;">
+                        <h3 class="card-title pb-3">EVENTS CATERING</h3>
+                        <p class="card-text px-5">We understand the importance of special occasions hence we will work with you closely to create a customised menu and offer practical solutions to meet your every catering need.</p>
+                        <div class="row justify-content-center pt-4">
+                            <button type="button"
+                                class="btn btn-light btn-outline-dark btn-lg rounded-pill btn-meet-au">SEE MORE</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card col-md-6 p-0 border-0">
+                <img class="img-banner img-black" src="/assets/img/img-foodservices.png" alt="">
+                <div class="card-img-overlay text-white text-center custoverlay">
+                    <div class="mx-4" style="margin:auto;">
+                        <h3 class="card-title pb-3">FOOD SERVICES</h3>
+                        <p class="card-text px-5">From everyday comfort food to gourmet cuisines for corporate clients,
+                            we offer a wide selection of set menus and foodline catering of any scale for all kinds of occasions and seasonal festive events.</p>
+                        <div class="row justify-content-center pt-4">
+                            <button type="button"
+                                class="btn btn-light btn-outline-dark btn-lg rounded-pill btn-meet-au">SEE MORE</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="container">
             <div class="text-center">
