:recycle: refactor : add overlay image container

--- a/index.html
+++ b/index.html
@@ -35,24 +35,24 @@
                 <div class="flex-fill mx-xl-5 mb-2">
                     <ul class="nav navbar-nav d-flex justify-content-between mx-xl-3 text-center text-dark">
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="index.html">ABOUT US</a>
+                            <a class="nav-link  rounded-pill px-3" href="index.html">ABOUT US</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="about.html">EVENTS
+                            <a class="nav-link  rounded-pill px-3" href="about.html">EVENTS
                                 CATERING</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="work.html">FOOD SERVICES</a>
+                            <a class="nav-link  rounded-pill px-3" href="work.html">FOOD SERVICES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3"
+                            <a class="nav-link  rounded-pill px-3"
                                 href="pricing.html">SUSTAINABILITY</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="contact.html">ARTICLES</a>
+                            <a class="nav-link  rounded-pill px-3" href="contact.html">ARTICLES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="contact.html">CONTACT US</a>
+                            <a class="nav-link  rounded-pill px-3" href="contact.html">CONTACT US</a>
                         </li>
                         <li class="nav-item">
                             <a class="btn-nav" href="contact.html">
@@ -69,7 +69,18 @@
     </nav>
 
 
-    <img class="img-banner" src="/assets/img/img-banner.png" alt="">
+    <!-- <img class="img-banner" src="/assets/img/img-banner.png" alt=""> -->
+
+    <div class="card col-md-12 p-0 border-0 ">
+        <img class="img-banner img-black"src="/assets/img/img-banner.png" alt="">
+        <div class="card-img-overlay text-white text-center bgoverlay">
+            <div class="mx-4" style="margin:auto;">
+                <h1 class="card-title pb-3">BRINGING JOY TO PEOPLE,
+                    ONE BELLY AT A TIME</h1>
+               
+            </div>
+        </div>
+    </div>
 
 
     <div class="container">
