:sparkles: feat : add form input

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                             <a class="nav-link  rounded-pill px-3" href="work.html">FOOD SERVICES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  rounded-pill px-3"
-                                href="pricing.html">SUSTAINABILITY</a>
+                            <a class="nav-link  rounded-pill px-3" href="pricing.html">SUSTAINABILITY</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link  rounded-pill px-3" href="contact.html">ARTICLES</a>
@@ -72,12 +71,12 @@
     <!-- <img class="img-banner" src="/assets/img/img-banner.png" alt=""> -->
 
     <div class="card col-md-12 p-0 border-0 ">
-        <img class="img-banner img-black"src="/assets/img/img-banner.png" alt="">
+        <img class="img-banner img-black" src="/assets/img/img-banner.png" alt="">
         <div class="card-img-overlay text-white text-center bgoverlay">
             <div class="mx-4" style="margin:auto;">
                 <h1 class="card-title pb-3">BRINGING JOY TO PEOPLE,
                     ONE BELLY AT A TIME</h1>
-               
+
             </div>
         </div>
     </div>
@@ -144,22 +143,17 @@
 
     </div>
 
-    <div class="bg-sustainability">
-        <!-- <section class="row tm-section mt-4 tm-col-md-reverse">
-            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
-                <img class="img-banner img-black" src="/assets/img/img-events.png" alt="">
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
-                <img class="img-banner img-black" src="/assets/img/img-foodservices.png" alt="">
-            </div>
-        </section> -->
+    <div class="bg-sustainability mt-4">
+
         <div class="row">
             <div class="card col-md-6 p-0 border-0 ">
                 <img class="img-banner img-black" src="/assets/img/img-events.png" alt="">
                 <div class="card-img-overlay text-white text-center custoverlay">
                     <div class="mx-4" style="margin:auto;">
                         <h3 class="card-title pb-3">EVENTS CATERING</h3>
-                        <p class="card-text px-5">We understand the importance of special occasions hence we will work with you closely to create a customised menu and offer practical solutions to meet your every catering need.</p>
+                        <p class="card-text px-5">We understand the importance of special occasions hence we will work
+                            with you closely to create a customised menu and offer practical solutions to meet your
+                            every catering need.</p>
                         <div class="row justify-content-center pt-4">
                             <button type="button"
                                 class="btn btn-light btn-outline-dark btn-lg rounded-pill btn-meet-au">SEE MORE</button>
@@ -173,7 +167,8 @@
                     <div class="mx-4" style="margin:auto;">
                         <h3 class="card-title pb-3">FOOD SERVICES</h3>
                         <p class="card-text px-5">From everyday comfort food to gourmet cuisines for corporate clients,
-                            we offer a wide selection of set menus and foodline catering of any scale for all kinds of occasions and seasonal festive events.</p>
+                            we offer a wide selection of set menus and foodline catering of any scale for all kinds of
+                            occasions and seasonal festive events.</p>
                         <div class="row justify-content-center pt-4">
                             <button type="button"
                                 class="btn btn-light btn-outline-dark btn-lg rounded-pill btn-meet-au">SEE MORE</button>
@@ -209,36 +204,63 @@
             <div class="mt-4">
                 <h4>TELL US MORE ABOUT YOUR EVENT</h4>
             </div>
-            <div class="mt-4">
-                <div class="row">
-                    <form action="">
-                        <div class="col-md-4">
+            <div class="container">
+                <div class="mt-4">
+                    <div class="row">
 
+                        <div class="col-md-4">
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                                    aria-describedby="basic-addon1">
+                            </div>
                         </div>
                         <div class="col-md-4">
-
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                                    aria-describedby="basic-addon1">
+                            </div>
                         </div>
                         <div class="col-md-4">
-
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                                    aria-describedby="basic-addon1">
+                            </div>
                         </div>
                         <div class="col-md-4">
-
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                                    aria-describedby="basic-addon1">
+                            </div>
                         </div>
                         <div class="col-md-4">
-
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                                    aria-describedby="basic-addon1">
+                            </div>
                         </div>
                         <div class="col-md-4">
-
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                                    aria-describedby="basic-addon1">
+                            </div>
                         </div>
                         <div class="col-md-12">
-
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                                    aria-describedby="basic-addon1">
+                            </div>
                         </div>
-                    </form>
 
+                        <div class="text-center">
+                            <button type="button" class="btn btn-outline-secondary btn-secondary text-light font-weight-bold button-radius">SEND</button>
+                            <br><br>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
 
     <div class="container">
         <h3 class="text-center text-uppercase pt-5 mt-5 pb-3">OUR AWARDS</h3>
