:sparkles: feat: add footer

--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
                         </div>
 
                         <div class="text-center">
-                            <button type="button" class="btn btn-outline-secondary btn-secondary text-light font-weight-bold button-radius">SEND</button>
+                            <button type="button"
+                                class="btn btn-outline-secondary btn-secondary text-light font-weight-bold button-radius">SEND</button>
                             <br><br>
                         </div>
                     </div>
@@ -325,6 +326,87 @@
 
 
 
+    </div>
+
+    <div class="footer">
+        <div class="wrap_footer">
+            <div class="row">
+                <div class="col-md-4 center">
+                    <div>
+                        <img src="../catering/logo_bellygood_footer.png" class="img-fluid" alt="">
+                    </div><br>
+                    <div class="bold">
+                        <p>For All Occasions</p>
+                    </div>
+                    <div>
+                        <img src="../catering/fb.png" class="img-fluid" alt="">
+                        <img src="../catering/ig.png" class="img-fluid" alt="">
+                        <img src="../catering/linkedin.png" class="img-fluid" alt="">
+                    </div><br>
+                    <div id="copyright">
+                        <p>© Bellygood 2022 Catering@Tunglok.com</p>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="row">
+                        <div class="col-md-4 left">
+                            <div class="bold">
+                                <p>Our Address</p>
+                            </div>
+                            <div>
+                                <p>26 Tai Seng Street</p>
+                            </div>
+                            <div>
+                                <p>#02-01 Singapore 534057</p>
+                            </div>
+                            <div>
+                                <p>Tel : 6694 1717</p>
+                            </div>
+                            <div>
+                                <p>Fax : 6272 7120</p>
+                            </div>
+                            <div>
+                                <p>Email : catering@tunglok.com</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 left">
+                            <div class="bold">
+                                <p>About Us</p>
+                            </div>
+                            <div>
+                                <p>About Us</p>
+                            </div>
+                            <div>
+                                <p>Our Team</p>
+                            </div>
+                            <div>
+                                <p>Contact Us</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 left">
+                            <div class="bold">
+                                <p>Customer Care</p>
+                            </div>
+                            <div>
+                                <p>Delivery</p>
+                            </div>
+                            <div>
+                                <p>Returns Policy</p>
+                            </div>
+                            <div>
+                                <p>Terms And Conditions</p>
+                            </div>
+                            <div>
+                                <p>Privacy Policy</p>
+                            </div>
+                            <div>
+                                <p>FAQ’s</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
